used the initiator function

--- a/2.objects_in_python/4_python_class.ipynb
+++ b/2.objects_in_python/4_python_class.ipynb
@@ -64,6 +64,53 @@
     "print(point_1.calculate_distance(point_2))\n",
     "print(point_1.calculate_distance(point_1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initializing the object\n",
+    "- it will throw an error if no arguemnt is provided during creatign an object like the point_2\n",
+    "- Python is a little different; it has a constructor and an initializer.\n",
+    "- The constructor method, __ new __(), is rarely used \n",
+    "- we put our initialization statements in an __ init __() function\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x:float, y:float) -> None:\n",
+    "        self.move(x,y)\n",
+    "    \n",
+    "    def move(self, x:float, y:float) -> None:\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def reset(self) -> None:\n",
+    "        self.move(0, 0)\n",
+    "\n",
+    "    def calculate_distance(self, other:\"Point\") -> float:\n",
+    "        return math.hypot(self.x - other.x, self.y-other.y)\n",
+    "\n",
+    "point = Point(3, 5)\n",
+    "print(point.x, point.y)\n",
+    "\n",
+    "#point_2 = Point()"
+   ]
   }
  ],
  "metadata": {
