used docstring to explain the class methods

--- a/2.objects_in_python/4_python_class.ipynb
+++ b/2.objects_in_python/4_python_class.ipynb
@@ -111,6 +111,71 @@
     "\n",
     "#point_2 = Point()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explaining yourself with docstrings\n",
+    "\n",
+    "- One of the best things to include in a docstring is a concrete example\n",
+    "- Tools like doctest can locate and confirm these examples are correct\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    \"\"\"\n",
+    "    Represents a point in two-dimensional geopetric coordinates\n",
+    "    >>> P_0 = Point()\n",
+    "    >>> p_1 = Point(3,4)\n",
+    "    >>> p_0.calculate_distance(p_1)\n",
+    "    5.0\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, x:float=0, y: float = 0) -> None:\n",
+    "        \"\"\"\n",
+    "        Initialize the position of new point. the x and y\n",
+    "        coordinates can be specified. If they are not, the \n",
+    "        point defaults to the origin.\n",
+    "\n",
+    "        :param x: float x-coordinate\n",
+    "        :param y: float x-coordinate\n",
+    "        \"\"\"\n",
+    "        self.move(x,y)\n",
+    "    \n",
+    "    def move(self, x:float, y:float) -> None:\n",
+    "        \"\"\"\n",
+    "        Move the point to a new locaiton in 2D space.\n",
+    "\n",
+    "        :param x: float x-coordinate\n",
+    "        :param y: float x-coordinate\n",
+    "        \"\"\"\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    \n",
+    "    def reset(self) -> None:\n",
+    "        \"\"\" \n",
+    "        Reset the point back to the geometric origin: 0, 0\n",
+    "        \"\"\"\n",
+    "        self.move(0, 0)\n",
+    "\n",
+    "    def calculate_distance(self, other: \"Point\") -> float:\n",
+    "        \"\"\" \n",
+    "        Calculate the Euclidean distance form this point\n",
+    "        to a second point passed as parameter.\n",
+    "\n",
+    "        :param other: POint instance\n",
+    "        :return: float distance\n",
+    "        \"\"\"\n",
+    "        return math.hypot(self.x - other.x, self.y - other.y)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
